Added routing and Angular Material

--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,6 +1,6 @@
 <body>
   <div class="container">
     It works!
-    <!--<router-outlet></router-outlet>-->
+    <router-outlet></router-outlet>
   </div>
 </body>
