--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,6 +1,7 @@
 <body>
   <div class="container">
     It works!
+    <mat-slider min="1" max="5" step="0.5" value="5"></mat-slider>
     <router-outlet></router-outlet>
   </div>
 </body>
