Added Angular flex-layout

--- a/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/ClientApp/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,6 @@
 <p>dashboard works!</p>
+<div fxLayout="row">
+    <div *ngFor="let sphere of spheres">
+        {{ sphere.title }}
+    </div>
+</div>
