--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -1,3 +1,6 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+a, a:visited, a:hover { color: inherit; text-decoration: none;}
+.breadcrumb { background-color: rgba(255, 255, 255, 0.1); }
+.active { color: #BBB !important; }
