--- a/ClientApp/src/app/rooms/rooms.component.html
+++ b/ClientApp/src/app/rooms/rooms.component.html
@@ -5,6 +5,6 @@
 </nav>
 <mat-nav-list>
     <div *ngFor="let room of rooms">
-        <a mat-list-item [routerLink]="['/spheres', this.sphereId, room.id]">{{ room.title }}</a>
+        <a mat-list-item [routerLink]="['/spheres', this.sphereId, room.roomId]">{{ room.title }}</a>
     </div>
 </mat-nav-list>
