--- a/ClientApp/src/app/rooms/rooms.component.html
+++ b/ClientApp/src/app/rooms/rooms.component.html
@@ -8,3 +8,8 @@
         <a mat-list-item [routerLink]="['/spheres', this.sphereId, room.roomId]">{{ room.title }}</a>
     </div>
 </mat-nav-list>
+<div fxLayout="row-reverse" class="mr-n5">
+    <button mat-fab color="primary" class="static-button">
+        <mat-icon>add</mat-icon>
+    </button>
+</div>
