--- a/ClientApp/src/app/sphere-dialog/sphere-dialog.component.html
+++ b/ClientApp/src/app/sphere-dialog/sphere-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>New Sphere</h2>
+<h2 mat-dialog-title>{{ this.dialogTitle }}</h2>
 <mat-dialog-content fxLayout="column">
     <mat-form-field>
         <input matInput [(ngModel)]="name" placeholder="Name" />
