--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -1,6 +1,8 @@
 html { height: 100%; }
 body { min-height: 100vh; margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-a, a:visited, a:hover { color: inherit; text-decoration: none;}
+a, a:visited, a:hover { color: inherit; text-decoration: none; }
+button { outline: none !important; }
 .breadcrumb { background-color: rgba(255, 255, 255, 0.1); }
 .active { color: #BBB !important; }
 .static-button { position: fixed !important; bottom: 50px; }
+.clickable { cursor: pointer; }
