--- a/ClientApp/src/app/messages/messages.component.html
+++ b/ClientApp/src/app/messages/messages.component.html
@@ -5,13 +5,19 @@
     </ol>
 </nav>
 <mat-list>
-    <mat-list-item *ngFor="let message of messages">{{ message.content }}</mat-list-item>
-    <mat-list-item fxLayout="row-reverse"><span>Your message</span></mat-list-item>
+    <mat-list-item fxLayout="row-reverse" *ngFor="let message of messages" class="hover-visible-parent">
+        <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="editMessageModal(message)"><mat-icon>edit</mat-icon><span>Edit</span></button>
+            <button mat-menu-item (click)="deleteMessageModal(message)"><mat-icon>delete</mat-icon><span>Remove</span></button>
+        </mat-menu>
+        <span>{{ message.content }}</span>
+        <button mat-icon-button class="hover-visibility" [matMenuTriggerFor]="menu"><mat-icon>more_vert</mat-icon></button>
+    </mat-list-item>
 </mat-list>
 <mat-divider></mat-divider>
-<form>
-    <mat-form-field fxFlex>
-        <input matInput placeholder="Message" />
+<div fxLayoutAlign="space-between center" class="mt-3">
+    <mat-form-field fxFlex class="mx-3">
+        <input matInput [(ngModel)]="field" (keyup.enter)="addMessageEvent()" placeholder="Message" />
     </mat-form-field>
-    <button mat-mini-fab><mat-icon>send</mat-icon></button>
-</form>
+    <button mat-mini-fab (click)="addMessageEvent()"><mat-icon>send</mat-icon></button>
+</div>
