Fixed splice bug

--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -8,3 +8,4 @@ button { outline: none !important; }
 .clickable { cursor: pointer; }
 .hover-visible-parent:hover .hover-visibility { visibility: visible; }
 .hover-visibility { visibility: hidden; }
+.sphere-desc { height: 350px; overflow: hidden; }
