Added single line clamping

--- a/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/ClientApp/src/app/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
         </mat-menu>
         <mat-card class="m-3">
             <div class="mb-3" fxLayoutAlign="space-between center">
-                <span>{{ sphere.name }}</span>
+                <span class="single-line-clamp">{{ sphere.name }}</span>
                 <button mat-icon-button [matMenuTriggerFor]="menu"><mat-icon class="clickable">more_horiz</mat-icon></button>
             </div>
             <mat-divider></mat-divider>
