--- a/ClientApp/src/app/components/messages/messages.component.html
+++ b/ClientApp/src/app/components/messages/messages.component.html
@@ -17,9 +17,9 @@
     </mat-list-item>
 </mat-list>
 <mat-divider></mat-divider>
-<div fxLayoutAlign="space-between center" class="mt-3">
+<form [formGroup]="messageForm" fxLayoutAlign="space-between center" class="mt-3">
     <mat-form-field fxFlex class="mx-3">
-        <input matInput [(ngModel)]="field" (keyup.enter)="addMessageEvent()" placeholder="Message" />
+        <input matInput formControlName="content" (keyup.enter)="addMessageEvent()" placeholder="Message" />
     </mat-form-field>
     <button mat-mini-fab (click)="addMessageEvent()"><mat-icon>send</mat-icon></button>
-</div>
+</form>
