--- a/ClientApp/src/app/components/confirm-dialog/confirm-dialog.component.html
+++ b/ClientApp/src/app/components/confirm-dialog/confirm-dialog.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>{{ this.promptTitle }}</h2>
 <mat-dialog-content>
-    <p>{{ this.promptDetails }}</p>
+    <p [innerHtml]="this.promptDetails"></p>
 </mat-dialog-content>
 <mat-dialog-actions class="mb-2">
     <button class="mat-raised-button mr-4 px-2" (click)="close()">Cancel</button>
