--- a/ClientApp/src/app/components/messages/messages.component.html
+++ b/ClientApp/src/app/components/messages/messages.component.html
@@ -4,22 +4,22 @@
         <li class="breadcrumb-item active single-line-clamp" aria-current="page">{{ this.room?.title }}</li>
     </ol>
 </nav>
-<mat-list>
-    <mat-list-item *ngFor="let message of messages" class="hover-visible-parent">
+<mat-list class="pb-2">
+    <mat-list-item *ngFor="let message of messages" class="h-100 pt-3 hover-visible-parent">
         <mat-menu #menu="matMenu">
             <button mat-menu-item (click)="editMessageModal(message)"><mat-icon>edit</mat-icon><span>Edit</span></button>
             <button mat-menu-item (click)="deleteMessageModal(message)"><mat-icon>delete</mat-icon><span>Remove</span></button>
         </mat-menu>
-        <div fxLayout="row" fxLayoutAlign="space-between center">
-            <span >{{ message.content }}</span>
-            <button mat-icon-button class="hover-visibility" [matMenuTriggerFor]="menu"><mat-icon class="align-middle">more_vert</mat-icon></button>
+        <div fxLayout="row" class="w-100" fxFlexAlign="space-between start">
+            <span fxFlex="grow" class="pt-2">{{ message.content }}</span>
+            <button mat-icon-button class="hover-visibility" [matMenuTriggerFor]="menu"><mat-icon>more_vert</mat-icon></button>
         </div>
     </mat-list-item>
 </mat-list>
 <mat-divider></mat-divider>
-<form [formGroup]="messageForm" fxLayoutAlign="space-between center" class="mt-3">
+<form (ngSubmit)="addMessageEvent()" [formGroup]="messageForm" fxLayoutAlign="space-between center" class="mt-3">
     <mat-form-field fxFlex class="mx-3">
         <input matInput formControlName="content" (keyup.enter)="addMessageEvent()" placeholder="Message" />
     </mat-form-field>
-    <button mat-mini-fab (click)="addMessageEvent()"><mat-icon>send</mat-icon></button>
+    <button mat-mini-fab type="submit"><mat-icon>send</mat-icon></button>
 </form>
