--- a/ClientApp/src/app/components/sphere-dialog/sphere-dialog.component.html
+++ b/ClientApp/src/app/components/sphere-dialog/sphere-dialog.component.html
@@ -1,15 +1,27 @@
-<form [formGroup]="sphereForm">
+<form (ngSubmit)="save()" [formGroup]="sphereForm">
     <h2 mat-dialog-title>{{ this.dialogTitle }}</h2>
     <mat-dialog-content fxLayout="column">
         <mat-form-field>
             <input matInput formControlName="name" placeholder="Name" />
         </mat-form-field>
+        <h6 class="bad-feedback"
+            *ngIf="sphereForm.controls['name'].invalid &&
+                   (sphereForm.controls['name'].dirty ||
+                   sphereForm.controls['name'].touched)">
+            Name is required
+        </h6>
         <mat-form-field>
             <textarea matInput formControlName="description" placeholder="Description"></textarea>
         </mat-form-field>
+        <h6 class="bad-feedback"
+            *ngIf="sphereForm.controls['description'].invalid &&
+                   (sphereForm.controls['description'].dirty ||
+                   sphereForm.controls['description'].touched)">
+            Description is required
+        </h6>
     </mat-dialog-content>
     <mat-dialog-actions class="mb-2">
         <button class="mat-raised-button mr-4 px-2" (click)="close()">Close</button>
-        <button class="mat-raised-button mat-accent px-2" (click)="save()">Save</button>
+        <button class="mat-raised-button mat-accent px-2" type="submit">Save</button>
     </mat-dialog-actions>
 </form>
